plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.java-gi:gtk:0.13.1'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

tasks.register('compileResources', Exec) {
    workingDir 'src/main/resources'
    commandLine 'glib-compile-resources', 'exampleapp.gresource.xml'
}

tasks.named('classes') {
    dependsOn compileResources
}

tasks.named('run') {
    jvmArgs += "--enable-native-access=ALL-UNNAMED"
}

application {
    mainClass = "ExampleMainClass"
}

